# TASK-5

./: metadata.json
repo/backend/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
repo/backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_phase2_schema.sql  20240103000000_phase3_schema.sql  20240104000000_add_pending_unpublish_status.sql  20240105000000_add_notifications.sql  20240106000000_add_key_version_to_vault.sql  20240107000000_add_webhook_endpoint_to_subscriptions.sql  20240108000000_add_user_term_acceptances.sql  20240109000000_add_pending_scan_media_status.sql  20240110000000_add_department_to_resources.sql  20240111000000_add_login_rate_limits.sql  20240112000000_add_rectify_fields.sql
repo/backend/src/: main.rs
repo/backend/src/auth/: hmac.rs  jwt.rs  mod.rs  password.rs
repo/backend/src/config/: mod.rs
repo/backend/src/dto/: approval.rs  auth.rs  booking.rs  course.rs  mod.rs  notification.rs  privacy.rs  risk.rs  term.rs
repo/backend/src/jobs/: mod.rs
repo/backend/src/middleware/: auth_guard.rs  client_ip.rs  correlation.rs  csrf_guard.rs  hmac_guard.rs  mod.rs  rate_limiter.rs  reauth_guard.rs
repo/backend/src/models/: approval.rs  audit.rs  booking.rs  course.rs  mod.rs  notification.rs  privacy.rs  risk.rs  term.rs  user.rs
repo/backend/src/repositories/: approval_repo.rs  audit_repo.rs  booking_repo.rs  course_repo.rs  login_rate_limit_repo.rs  mod.rs  (+8 more)
repo/frontend/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  index.html  nginx.conf
repo/frontend/assets/: main.css
repo/frontend/src/: main.rs
(+106 files in other folders)
