[package]
name = "campus-learn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid", "json"] }
jsonwebtoken = "9"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
