[package]
name = "campus-learn-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlDocument"] }
wasm-bindgen = "0.2"
tracing = "0.1"
tracing-wasm = "0.2"
